# eo_cd_slo

./: .env  .gitignore  DOCKER_WORKFLOW.md  README.md  README_v4_pipeline.md  cleanup-docker.sh  compose.yaml  compose.yml  pipeline.sh  start-services.sh  stop-services.sh  test.yml  update-api.sh  update-database.sh
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.uv-venv  main.py  pyproject.toml  requirements.txt  setup_logfire.py  start.sh
backend/app/: main.py
backend/app/api/: images.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: schemas.py
backend/app/repositories/: eo_repository.py
backend/app/services/: eo_service.py  image_service.py
cluster/: .dockerignore  13.tiff  2.tiff  Analyze_tiff.ipynb  BTC_pipeline.ipynb  BTC_pipeline_v2.ipynb  Dockerfile  QUICKSTART.md  README.md  __init__.py  docker-compose.yml  pipeline.sh  requirements.txt  requirements_pipeline.txt  sentinel2_grid_463_2023_08.tiff  sentinel2_grid_463_2023_08_256x256.tif  sentinel2_grid_463_2023_08_256x256_aspect_256x256.tif  sentinel2_grid_463_2024_08_256x256.tif  test_setup.py
data/: slovenia_grid.gpkg  slovenia_grid_expanded.gpkg  svn_border.geojson
frontend/: .dockerignore  .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
scripts/: GettingStarted.ipynb  README.md  create_mask.py  create_slovenia_grid.py  create_slovenia_grid_expanded.py  debug_database_images.py  download_ndvi.ipynb  download_satellite_img.py  download_sentinel_openeo.py  download_sentinel_v4.py  insert_sentinel_database.py  (+8 more)
(+52 files in other folders)
